--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,9 @@
   command = "npm run build"
   publish = "dist"
 
+[build.environment]
+  NODE_VERSION = "18"
+
 # Enable SPA fallback
 [[redirects]]
   from = "/*"
